# workload-guesser

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt
data/: sample_courses.csv
models/: .gitkeep
tests/: conftest.py  test_data.py  test_features.py  test_model.py  test_umd.py
workload_guesser/: __init__.py  cli.py  data.py  features.py  model.py  umd.py
